plugins {
	id 'java'
	id 'java-library'
	id 'org.springframework.boot' version '3.0.5'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.iot'

tasks.named('test') {
	useJUnitPlatform()
}

dependencies {
	api project(":transversal")
	api 'org.projectlombok:lombok:1.18.26'
	api 'org.springframework:spring-context:5.3.19'
}

allprojects {
	group = 'com.iot.petplate'
	version = '0.0.1'
	sourceCompatibility = '17'

	repositories {
		mavenLocal()
		mavenCentral()
	}
}